<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_left"
            android:id="@+id/buttonLeft"
            android:layout_alignParentStart="true"
            android:onClick="onLeft"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_right"
            android:id="@+id/buttonRight"
            android:layout_alignParentEnd="true"
            android:onClick="onRight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/textCenter"
            android:id="@+id/textViewDirection"
            android:onClick="onText"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorViewBackground"
                android:layout_margin="@dimen/view_min_margin"
                android:padding="@dimen/view_padding"
                android:textAlignment="center"
                android:text="@string/one" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorViewBackground"
                android:layout_margin="@dimen/view_min_margin"
                android:padding="@dimen/view_padding"
                android:textAlignment="center"
                android:text="@string/two" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorViewBackground"
                android:layout_margin="@dimen/view_min_margin"
                android:padding="@dimen/view_padding"
                android:textAlignment="center"
                android:text="@string/three" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorViewBackground"
                android:layout_margin="@dimen/view_min_margin"
                android:padding="@dimen/view_padding"
                android:textAlignment="center"
                android:text="@string/four" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorViewBackground"
                android:layout_margin="@dimen/view_min_margin"
                android:padding="@dimen/view_padding"
                android:textAlignment="center"
                android:text="@string/five" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorViewBackground"
                android:layout_margin="@dimen/view_min_margin"
                android:padding="@dimen/view_padding"
                android:textAlignment="center"
                android:text="@string/digit_one" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorViewBackground"
                android:layout_margin="@dimen/view_min_margin"
                android:padding="@dimen/view_padding"
                android:textAlignment="center"
                android:text="@string/digit_two" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorViewBackground"
                android:layout_margin="@dimen/view_min_margin"
                android:padding="@dimen/view_padding"
                android:textAlignment="center"
                android:text="@string/digit_three" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorViewBackground"
                android:layout_margin="@dimen/view_min_margin"
                android:padding="@dimen/view_padding"
                android:textAlignment="center"
                android:text="@string/digit_four" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
