<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorViewBackground"
        android:layout_margin="@dimen/view_margin"
        android:padding="@dimen/view_padding"
        android:textAlignment="center"
        android:text="@string/one" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorViewBackground"
        android:layout_margin="@dimen/view_margin"
        android:padding="@dimen/view_padding"
        android:textAlignment="center"
        android:text="@string/two" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorViewBackground"
        android:layout_margin="@dimen/view_margin"
        android:padding="@dimen/view_padding"
        android:textAlignment="center"
        android:text="@string/three" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorViewBackground"
        android:layout_margin="@dimen/view_margin"
        android:padding="@dimen/view_padding"
        android:textAlignment="center"
        android:text="@string/four" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorViewBackground"
        android:layout_margin="@dimen/view_margin"
        android:padding="@dimen/view_padding"
        android:textAlignment="center"
        android:text="@string/five" />

</LinearLayout>
