<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@color/colorViewBackground"
        android:layout_margin="@dimen/view_margin"
        android:padding="@dimen/view_padding"
        android:textAlignment="center"
        android:text="@string/digit_one" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@color/colorViewBackground"
        android:layout_margin="@dimen/view_margin"
        android:padding="@dimen/view_padding"
        android:textAlignment="center"
        android:text="@string/digit_two" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@color/colorViewBackground"
        android:layout_margin="@dimen/view_margin"
        android:padding="@dimen/view_padding"
        android:textAlignment="center"
        android:text="@string/digit_three" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@color/colorViewBackground"
        android:layout_margin="@dimen/view_margin"
        android:padding="@dimen/view_padding"
        android:textAlignment="center"
        android:text="@string/digit_four" />

</LinearLayout>
