<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:layout_margin="@dimen/view_margin"
        android:orientation="vertical"
        android:background="@color/colorViewBackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_send_data"/>
        <EditText
            android:id="@+id/editTextData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_send_data_hint"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:background="@color/colorButtonBackground"
            android:text="@string/button_start_with_data"
            android:onClick="onSendData"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_padding"
        android:layout_margin="@dimen/view_margin"
        android:orientation="vertical"
        android:background="@color/colorViewBackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_send_data"/>
        <TextView
            android:id="@+id/textViewReceivedResultAndData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:hint="@string/text_result_data_hint"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:background="@color/colorButtonBackground"
            android:text="@string/button_start_for_result"
            android:onClick="onStartForResult"/>

    </LinearLayout>

</LinearLayout>
